--- a/proj/scss/_contact.scss
+++ b/proj/scss/_contact.scss
@@ -17,6 +17,10 @@
         grid-template-columns: 1fr;
         grid-gap: 2rem;
         font-size: 1.5rem;
+        span {
+            color: $secondary-color;
+            display: block;
+        }
     }
     .social-icons {
         position: initial;
